modification css image article 1 page d'accueil

--- a/fr/index.html
+++ b/fr/index.html
@@ -25,7 +25,7 @@
         <img class="fleche" src="/public/icones/fleche.svg" alt="">
     </section>
     <section>
-        <img src="/public/img/image article 1 page d'accueil.webp" alt="">
+        <img class="img-cover" src="/public/img/image article 1 page d'accueil.webp" alt="">
         <p class="titre-3">Une réplique marquante</p>
         <p>Plongez dans les profondeurs du film "Avatar" de James Cameron et explorez une réplique qui éveille les consciences, remettant en question l'avidité, l'impérialisme et notre relation avec la nature.</p>
         <a  href="/fr/page article 1.html">
