modification css ligne article 1 page d'accueil

--- a/fr/index.html
+++ b/fr/index.html
@@ -31,7 +31,7 @@
         <a  href="/fr/page article 1.html">
         <p class="btn-plus">Voir plus </p>
         </a>
-        <hr>
+        <hr class="ligne-accueil">
     </section>
     <section>
         <img src="/public/img/image article 2 page d'accueil.webp" alt="">
