ajout css section 3 page d'accueil

--- a/fr/index.html
+++ b/fr/index.html
@@ -28,19 +28,19 @@
         <img class="img-cover" src="/public/img/image article 1 page d'accueil.webp" alt="">
         <p class="titre-3">Une réplique marquante</p>
         <p>Plongez dans les profondeurs du film "Avatar" de James Cameron et explorez une réplique qui éveille les consciences, remettant en question l'avidité, l'impérialisme et notre relation avec la nature.</p>
-        <a  href="/fr/page article 1.html">
+        <a href="/fr/page article 1.html">
         <p class="btn-plus">Voir plus </p>
         </a>
         <hr class="ligne-accueil">
     </section>
     <section>
-        <img src="/public/img/image article 2 page d'accueil.webp" alt="">
+        <img class="img-cover" src="/public/img/image article 2 page d'accueil.webp" alt="">
         <p class="titre-3">Un film culte</p>
         <p>Plongez dans l'univers extraordinaire de Pandora, explorez le conflit entre les humains et les Na'vi, et immergez-vous dans un message écologique puissant. Découvrez comment "Avatar" a redéfini le cinéma.</p>
         <a href="/fr/page article 2.html">
-        <p>Voir plus </p>
+        <p class="btn-plus">Voir plus </p>
         </a>
-        <hr>
+        <hr class="ligne-accueil">
     </section>
     <section>
         <img src="/public/img/image article 3 page d'accueil.webp" alt="">
