ajout css article 3 page d'accueil

--- a/fr/index.html
+++ b/fr/index.html
@@ -43,13 +43,13 @@
         <hr class="ligne-accueil">
     </section>
     <section>
-        <img src="/public/img/image article 3 page d'accueil.webp" alt="">
+        <img class="img-cover" src="/public/img/image article 3 page d'accueil.webp" alt="">
         <p class="titre-3">Un réalisateur visionnaire</p>
         <p>Découvrez le parcours exceptionnel de James Cameron, un maître de la science-fiction et un défenseur de l'exploration des fonds marins. Plongez dans l'impact révolutionnaire de "Avatar" sur l'industrie cinématographique.</p>
         <a href="/fr/page article 3.html">
-        <p>Voir plus </p>
+        <p class="btn-plus">Voir plus </p>
         </a>
-        <hr>
+        <hr class="ligne-accueil">
     </section>
     <section>
         <img src="/public/img/image article 4 page d'accueil.webp" alt="">
