--- a/fr/index.html
+++ b/fr/index.html
@@ -52,13 +52,13 @@
         <hr class="ligne-accueil">
     </section>
     <section>
-        <img src="/public/img/image article 4 page d'accueil.webp" alt="">
+        <img class="img-cover" src="/public/img/image article 4 page d'accueil.webp" alt="">
         <p class="titre-3">Une bande son envoûtante</p>
         <p>Découvrez comment la bande-son de "Avatar" transporte les spectateurs dans un monde d'émotions intenses. Explorez le morceau magique "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" de James Horner, qui est un voyage musical envoûtant dans l'univers de Pandora.</p>
         <a href="/fr/page article 4.html">
-        <p>Voir plus </p>
+        <p class="btn-plus">Voir plus </p>
         </a>
-        <hr>
+        <hr class="ligne-accueil">
     </section>
     <section>
         <img src="/public/img/image article 5 page d'accueil.webp" alt="">
