ajout css article 5 page d'accueil

--- a/fr/index.html
+++ b/fr/index.html
@@ -61,11 +61,11 @@
         <hr class="ligne-accueil">
     </section>
     <section>
-        <img src="/public/img/image article 5 page d'accueil.webp" alt="">
+        <img class="img-cover" src="/public/img/image article 5 page d'accueil.webp" alt="">
         <p class="titre-3">Un livre captivant</p>
         <p>Découvrez comment "Avatar: Le Livre" vous transporte dans l'univers extraordinaire du film de James Cameron, offrant des détails fascinants sur l’univers d’Avatar et une opportunité de vivre cette aventure immersive d'une toute nouvelle manière.</p>
         <a href="/fr/page article 5.html">
-        <p>Voir plus </p>
+        <p class="btn-plus">Voir plus </p>
         </a>
     </section>
     <footer class="footer">
