--- a/fr/page article 1.html
+++ b/fr/page article 1.html
@@ -17,11 +17,12 @@
         </p>
         <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
     </header>
-    <section>
-        <h3>Une réplique marquante</h3>
-        <hr>
-        <img src="/public/img/image article 1 page d'accueil.webp" alt="">
-        <cite>"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</cite>
+    <section class="section-1-1">
+        <p class="titre-2">Une réplique</p>
+        <p class="titre-2-bis">marquante</p>
+        <hr class="ligne-1-article">
+        <img class="img-cover" src="/public/img/image article 1 page d'accueil.webp" alt="">
+        <cite class="citation-2">"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</cite>
         <p>Plongez dans les profondeurs du film "Avatar" de James Cameron et explorez une réplique qui éveille les consciences, remettant en question l'avidité, l'impérialisme et notre relation avec la nature.</p>
         <p>Le film Avatar de James Cameron, en plus du divertissement, traite de beaucoup de thèmes de notre société comme la nature, la technologie, la guerre ou encore la moralité. L'une des réplique mémorables du film est : "Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</p>
         <img src="/public/img/jake et neytiri arme.webp" alt="">
