ajout footer avec css sur toutes les pages

--- a/fr/page article 4.html
+++ b/fr/page article 4.html
@@ -36,16 +36,24 @@
         <p>"Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" est également devenu un des morceaux favoris des fans, souvent interprété lors de concerts symphoniques en direct et célébré pour sa beauté intemporelle. Les personnes ayant vu le film se souviennent pendant bien longtemps la mélodie de la musique, ce qui rappelle le pouvoir transformateur de la musique dans la narration cinématographique.</p>
         <p>En conclusion, la musique d' "Avatar", et en particulier "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri", montre la capacité du film à transporter les spectateurs dans un autre monde et à évoquer des émotions puissantes. La composition de James Horner ajoute une couche supplémentaire de profondeur à la narration, en faisant une part essentielle de l'expérience cinématographique. Cette musique et les musiques d’Avatar en général participent au fait que le film dure dans le temps.</p>
     </section>
-    <footer>
-        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="">
-        <h4>RÉSEAUX SOCIAUX</h4>
-        <img src="/public/icones/BxlInstagram (1).svg" alt="">
-        <img src="/public/icones/BxlFacebookCircle (1).svg" alt="">
-        <img src="/public/icones/icons8-twitterx (1).svg" alt=""> 
-        <img src="/public/icones/BxlSpotify.svg" alt="">
-        <hr>
-        <p>Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
-        <img src="/public/icones/logo MMI.svg" alt="">
+    <footer class="footer">
+        <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
+        <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
+        <a href="https://www.instagram.com/explore/tags/avatar/">
+        <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
+        </a>
+        <a href="https://www.facebook.com/avatarlefilm">
+        <img class="logos-footer" src="/public/icones/logo Facebook.svg" alt="">
+        </a>
+        <a href="https://twitter.com/officialavatar">
+        <img class="logos-footer" src="/public/icones/logo X.svg" alt=""> 
+        </a>
+        <a href="https://open.spotify.com/playlist/5xikFhBDZVLs3Cklcxnnki">
+        <img class="logos-footer" src="/public/icones/Vector.svg" alt="">
+        </a>
+        <hr class="ligne">
+        <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
     </footer>
 </body>
 </html>
