--- a/fr/page article 3.html
+++ b/fr/page article 3.html
@@ -35,16 +35,24 @@
         <p>Au fil des années, James Cameron a prouvé sa capacité à raconter des histoires puissantes tout en tirant parti des dernières avancées technologiques pour donner vie à ses films. </p>
         <p>James Cameron est un réalisateur visionnaire et un pilier du cinéma et va peut-être encore plus prouver sa valeur avec les suites des films avatar.</p>
     </section>
-    <footer>
-        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="">
-        <h4>RÉSEAUX SOCIAUX</h4>
-        <img src="/public/icones/BxlInstagram (1).svg" alt="">
-        <img src="/public/icones/BxlFacebookCircle (1).svg" alt="">
-        <img src="/public/icones/icons8-twitterx (1).svg" alt=""> 
-        <img src="/public/icones/BxlSpotify.svg" alt="">
-        <hr>
-        <p>Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
-        <img src="/public/icones/logo MMI.svg" alt="">
+    <footer class="footer">
+        <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
+        <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
+        <a href="https://www.instagram.com/explore/tags/avatar/">
+        <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
+        </a>
+        <a href="https://www.facebook.com/avatarlefilm">
+        <img class="logos-footer" src="/public/icones/logo Facebook.svg" alt="">
+        </a>
+        <a href="https://twitter.com/officialavatar">
+        <img class="logos-footer" src="/public/icones/logo X.svg" alt=""> 
+        </a>
+        <a href="https://open.spotify.com/playlist/5xikFhBDZVLs3Cklcxnnki">
+        <img class="logos-footer" src="/public/icones/Vector.svg" alt="">
+        </a>
+        <hr class="ligne">
+        <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
     </footer>
 </body>
 </html>
