ajout liens logo site et mmi footer sur toutes les pages

--- a/fr/page article 3.html
+++ b/fr/page article 3.html
@@ -36,7 +36,9 @@
         <p>James Cameron est un réalisateur visionnaire et un pilier du cinéma et va peut-être encore plus prouver sa valeur avec les suites des films avatar.</p>
     </section>
     <footer class="footer">
+        <a href="/fr/index.html">
         <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
+        </a>
         <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
         <a href="https://www.instagram.com/explore/tags/avatar/">
         <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
@@ -52,7 +54,9 @@
         </a>
         <hr class="ligne">
         <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <a href="http://www.iut-bm.univ-fcomte.fr/pages/fr/dpt-mmi---actualites-18542.html">
         <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
+        </a>
     </footer>
 </body>
 </html>
