--- a/fr/page article 4.html
+++ b/fr/page article 4.html
@@ -37,7 +37,9 @@
         <p>En conclusion, la musique d' "Avatar", et en particulier "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri", montre la capacité du film à transporter les spectateurs dans un autre monde et à évoquer des émotions puissantes. La composition de James Horner ajoute une couche supplémentaire de profondeur à la narration, en faisant une part essentielle de l'expérience cinématographique. Cette musique et les musiques d’Avatar en général participent au fait que le film dure dans le temps.</p>
     </section>
     <footer class="footer">
+        <a href="/fr/index.html">
         <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
+        </a>
         <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
         <a href="https://www.instagram.com/explore/tags/avatar/">
         <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
@@ -53,7 +55,9 @@
         </a>
         <hr class="ligne">
         <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <a href="http://www.iut-bm.univ-fcomte.fr/pages/fr/dpt-mmi---actualites-18542.html">
         <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
+        </a>
     </footer>
 </body>
 </html>
