--- a/fr/page article 2.html
+++ b/fr/page article 2.html
@@ -48,7 +48,9 @@
         <h4>AUTRES FILMS</h4>
     </section>
     <footer class="footer">
+        <a href="/fr/index.html">
         <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
+        </a>
         <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
         <a href="https://www.instagram.com/explore/tags/avatar/">
         <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
@@ -64,7 +66,9 @@
         </a>
         <hr class="ligne">
         <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <a href="http://www.iut-bm.univ-fcomte.fr/pages/fr/dpt-mmi---actualites-18542.html">
         <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
+        </a>
     </footer>
 </body>
 </html>
