--- a/fr/page à propos.html
+++ b/fr/page à propos.html
@@ -24,7 +24,9 @@
         <p>J’ai créé ce site sur Avatar car je suis un fan de ce film et je voulais partager cet univers à d’autres personnes. Je voulais créer un site pour faire découvrir cet univers aux personnes qui n’ont jamais vu le film mais également rappeler de bons souvenirs à ceux qui ont vu le site ou leur faire découvrir de nouvelles choses sur cet univers.</p>
     </section>
     <footer class="footer">
+        <a href="/fr/index.html">
         <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
+        </a>
         <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
         <a href="https://www.instagram.com/explore/tags/avatar/">
         <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
@@ -40,7 +42,9 @@
         </a>
         <hr class="ligne">
         <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <a href="http://www.iut-bm.univ-fcomte.fr/pages/fr/dpt-mmi---actualites-18542.html">
         <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
+        </a>
     </footer>
 </body>
 </html>
