ajout css intro page article 2

--- a/fr/index.html
+++ b/fr/index.html
@@ -18,7 +18,7 @@
         <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
     </header>
     <section class="section-1">
-        <img src="/public/img/jake et neytiri proches.webp" alt="">-
+        <img src="/public/img/jake et neytiri proches.webp" alt="">
         <p class="titre-1">AVATAR</p>
         <hr class="ligne-1">
         <cite class="citation">"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</cite>
