--- a/fr/page article 2.html
+++ b/fr/page article 2.html
@@ -17,11 +17,12 @@
         </p>
         <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
     </header>
-    <section>
-        <h3>Un film culte</h3>
-        <hr>
-        <img src="/public/img/image article 2 page d'accueil.webp" alt="">
-        <h4>Avatar</h4>
+    <section class="section-1-1">
+        <p class="titre-2">Un film</p>
+        <p class="titre-2-bis">culte</p>
+        <hr class="ligne-1-article">
+        <img class="img-cover" src="/public/img/image article 2 page d'accueil.webp" alt="">
+        <p class="titre-4">Avatar<p>
         <p>Plongez dans l'univers extraordinaire de Pandora, explorez le conflit entre les humains et les Na'vi, et immergez-vous dans un message écologique puissant. Découvrez comment "Avatar" a redéfini le cinéma.</p>
         <p>Le titre du film est Avatar. Il a été réalisé par James Cameron en 2009. C’est un film de science-fiction qui a révolutionné le cinéma d’animation et même le cinéma en général grâce à  un univers extraordinaire, une histoire captivante et des personnages inoubliables.</p>
         <img src="/public/img/jake et neytiri arme.webp" alt="">
