ajout css section 1 page article 2

--- a/fr/page article 2.html
+++ b/fr/page article 2.html
@@ -25,17 +25,17 @@
         <p class="titre-4">Avatar<p>
         <p>Plongez dans l'univers extraordinaire de Pandora, explorez le conflit entre les humains et les Na'vi, et immergez-vous dans un message écologique puissant. Découvrez comment "Avatar" a redéfini le cinéma.</p>
         <p>Le titre du film est Avatar. Il a été réalisé par James Cameron en 2009. C’est un film de science-fiction qui a révolutionné le cinéma d’animation et même le cinéma en général grâce à  un univers extraordinaire, une histoire captivante et des personnages inoubliables.</p>
-        <img src="/public/img/jake et neytiri arme.webp" alt="">
+        <img class="img-articles" src="/public/img/jake et neytiri arme.webp" alt="">
         <p>Avatar se déroule sur la planète fictive de Pandora, où les humains explorent les ressources naturelles tout en entrant en conflit avec les autochtones, les Na'vi. Au cœur de cette intrigue se trouve le personnage de Jake Sully, incarné par Sam Worthington. Jake, un vétéran paraplégique, qui a la chance de participer au programme Avatar, qui lui permet de contrôler un avatar Na'vi grâce à une interface neurale. Au fur et à mesure de son immersion dans la culture Na'vi, Jake devient un défenseur de leur mode de vie harmonieux, remettant en question les intentions destructrices de l'entreprise minière humaine.</p>
-        <img src="/public/img/j et n regardent la foret.webp" alt="">
+        <img class="img-articles" src="/public/img/j et n regardent la foret.webp" alt="">
         <p>L'une des caractéristiques les plus frappantes d'Avatar est son utilisation révolutionnaire de la technologie 3D. James Cameron a  réussi à repousser les limites de la cinématographie en créant un monde de Pandora d'une beauté époustouflante. En effet, les images 3D immersives transportent les spectateurs dans un univers qui a beaucoup de détails, avec une faune et une flore exotiques. Les scènes de vol à dos de banshee (créature volante dans le film) et de combats épiques entre les Na'vi et les forces humaines sont des moments inoubliables. </p>
-        <img src="/public/img/3d corp.webp" alt="">
+        <img class="img-articles" src="/public/img/3d corp.webp" alt="">
         <p>Les acteurs comme Sam Worthington et Zoë Saldana, qui jouent les rôles de Jake Sully et Neytiri qui sont les personnages principaux du film, ont également joué un rôle important dans le succès d’Avatar.</p>
-        <img src="/public/img/j et n derriere.webp" alt="">
+        <img class="img-articles" src="/public/img/j et n derriere.webp" alt="">
         <p>Le message écologique profondément ancré dans Avatar est une autre caractéristique qui le distingue. Le film met en lumière les conséquences néfastes de l'exploitation des ressources naturelles au détriment de la préservation de l'environnement. Cette facette du film sur l'avidité humaine et la nécessité de protéger notre planète est une métaphore avec la réalité pour faire prendre conscience aux personnes qu’il faut protéger et respecter la planète et ne pas être aveuglé par l'avidité et notre soif de ressources.</p>
-        <img src="/public/img/plein de pollen.webp" alt="">
+        <img class="img-articles" src="/public/img/plein de pollen.webp" alt="">
         <p>La bande originale d'Avatar, composée par James Horner, ajoute une dimension émotionnelle au film. Les mélodies envoûtantes et les thèmes musicaux sensationnels permettent de transporter le public encore plus dans l'univers de Pandora.</p>
-        <img src="/public/img/bande son img.webp" alt="">
+        <img class="img-articles" src="/public/img/bande son img.webp" alt="">
         <p>Mais le succès d’Avatar n’est pas seulement lié à son contenu. Le film a battu des records au box-office, devenant le film le plus rentable de tous les temps jusqu'à cette date. Cette réussite commerciale a également conduit à la création d'une franchise étendue, avec plusieurs suites prévues pour les années à venir. Avatar est un film qui restera dans l’histoire du cinéma.</p>
     </section>
     <section>
