ajout css intro page article 3

--- a/fr/page article 3.html
+++ b/fr/page article 3.html
@@ -17,11 +17,12 @@
         </p>
         <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
     </header>
-    <section>
-        <h2>Un réalisateur visionnaire</h2>
-        <hr>
-        <img src="/public/img/image article 3 page d'accueil.webp" alt="">
-        <h4>James Cameron</h4>
+    <section class="section-1-1">
+        <p class="titre-2">Un réalisateur</p>
+        <p class="titre-2-bis">visionnaire</p>
+        <hr class="ligne-1-article">
+        <img class="img-cover" src="/public/img/image article 3 page d'accueil.webp" alt="">
+        <p class="titre-4">James Cameron</p>
         <p>Découvrez le parcours exceptionnel de James Cameron, un maître de la science-fiction et un défenseur de l'exploration des fonds marins. Plongez dans l'impact révolutionnaire de "Avatar" sur l'industrie cinématographique.</p>
         <p>James Cameron est un réalisateur, scénariste et producteur de renom.C’est un réalisateur qui a révolutionné l'industrie cinématographique et qui est très renommé dans ce milieu. Né le 16 août 1954 au Canada, Cameron a acquis une renommée mondiale grâce à son talent pour la réalisation de films qui repoussent les limites de la technologie cinématographique.</p>
         <img src="/public/img/awards.webp" alt="">
