ajout css intro page article 4

--- a/fr/page article 4.html
+++ b/fr/page article 4.html
@@ -17,11 +17,12 @@
         </p>
         <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
     </header>
-    <section>
-        <h2>Une bande son envoûtante</h2>
-        <hr>
-        <img src="/public/img/image article 4 page d'accueil.webp" alt="">
-        <h4>Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri</h4>
+    <section class="section-1-1">
+        <p class="titre-2">Une bande son</p> 
+        <p class="titre-2-bis">envoûtante</p>
+        <hr class="ligne-1-article">
+        <img class="img-cover" src="/public/img/image article 4 page d'accueil.webp" alt="">
+        <p class="titre-4">Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri</p>
         <p>Découvrez comment la bande-son de "Avatar" transporte les spectateurs dans un monde d'émotions intenses. Explorez le morceau magique "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" de James Horner, qui est un voyage musical envoûtant dans l'univers de Pandora.</p>
         <p>"Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" - Un Voyage Musical dans Avatar</p>
         <p>L'épopée de James Cameron en 2009, "Avatar", a captivé les spectateurs avec ses images à couper le souffle et sa technologie 3D révolutionnaire, mais il a également laissé une empreinte indélébile grâce à sa bande-son envoûtante. L'un des morceaux les plus marquants est "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri", composé par James Horner.</p>
