ajout css intro page article 5

--- a/fr/page article 5.html
+++ b/fr/page article 5.html
@@ -17,11 +17,12 @@
         </p>
         <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
     </header>
-    <section>
-        <h2>Un livre captivant</h2>
-        <hr>
-        <img src="/public/img/image article 5 page d'accueil.webp" alt="">
-        <h4>Avatar : Le livre</h4>
+    <section class="section-1-1">
+        <p class="titre-2">Un livre</p>
+        <p class="titre-2-bis">captivant</p>
+        <hr class="ligne-1-article">
+        <img class="img-cover" src="/public/img/image article 5 page d'accueil.webp" alt="">
+        <p class="titre-4">Avatar : Le livre</p>
         <p>Découvrez comment Avatar: Le roman du film vous transporte dans l'univers extraordinaire du film de James Cameron, offrant des détails fascinants sur l’univers d’Avatar et une opportunité de vivre cette aventure immersive d'une toute nouvelle manière.</p>
         <p>Avatar : Le roman du film <br>
         Les fans de l'univers captivant Avatar, le film épique de science-fiction de James Cameron, peuvent désormais se plonger encore plus profondément dans cette aventure extraordinaire grâce à Avatar: Le roman du film. Cette extension du monde cinématographique offre un regard détaillé sur Pandora, ses habitants, et les histoires qui se cachent derrière cette planète extraordinaire.</p>
