ajout css section 1 page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -17,11 +17,14 @@
         </p>
         <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
     </header>
-    <h2>Autres projets</h2>
-        <hr>
+    <section class="section-1-1">
+    <p  class="titre-2">Autres projets</p>
+        <hr class="ligne-1-article">
+    </section>
     <section>
-        <img src="/public/img/Asterix et Obelix mission Chleopatre 1.webp" alt="">
+        <img class="img-articles" src="/public/img/Asterix et Obelix mission Chleopatre 1.webp" alt="">
         <p>"Mission Cléopâtre" réalisé par Chloé Vincent sur le film “Astérix et Obélix: mission Cléopâtre”</p>
+        <hr class="ligne-1-2">
     </section>
     <section>
         <img src="/public/img/Kaamelott 1.webp" alt="">
