ajout css page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -27,44 +27,54 @@
         <hr class="ligne-1-2">
     </section>
     <section>
-        <img src="/public/img/Kaamelott 1.webp" alt="">
+        <img class="img-articles" src="/public/img/Kaamelott 1.webp" alt="">
         <p>"Kaalsifis" réalisé par Maëlle Coquelet sur le film “Kaamelott : Premier Volet”</p>
+        <hr class="ligne-1-2">
     </section>
     <section>
-        <img src="/public/img/Le chateau ambulant 1.webp" alt="">
+        <img class="img-articles" src="/public/img/Le chateau ambulant 1.webp" alt="">
         <p>“MysticHowl” réalisé par Anis Amrouche sur le film “Le château ambulant”</p>
+        <hr class="ligne-1-2">
     </section>
     <section>
-        <img src="/public/img/affiche-film-hunger-games-26772 1.webp" alt="">
+        <img class="img-articles" src="/public/img/affiche-film-hunger-games-26772 1.webp" alt="">
         <p>"Hope Games" réalisé par Noélie Talhouarn sur le film “Hunger Games”</p>
+        <hr class="ligne-1-2">
     </section>
     <section>
-        <img src="/public/img/Alien le 8eme passager 1.webp" alt="">
+        <img class="img-articles" src="/public/img/Alien le 8eme passager 1.webp" alt="">
         <p>"Alien from space" réalisé par Max Prin sur le film “Alien le 8eme passager”</p>
+        <hr class="ligne-1-2">
     </section>
     <section>
-        <img src="/public/img/Fight Club 1.webp" alt="">
+        <img class="img-articles" src="/public/img/Fight Club 1.webp" alt="">
         <p>"Insomnia" réalisé par Matys Ouvrard sur le film “Fight Club”</p>
+        <hr class="ligne-1-2">
     </section>
     <section>
-        <img src="/public/img/Scarface 1.webp" alt="">
+        <img class="img-articles" src="/public/img/Scarface 1.webp" alt="">
         <p>"ScarInfo" réalisé par Matthis Boreaniz sur le film "Scarface"</p>
+        <hr class="ligne-1-2">
     </section>
     <section>
-        <img src="/public/img/Le seigneur des anneaux 1.webp" alt="">
+        <img class="img-articles" src="/public/img/Le seigneur des anneaux 1.webp" alt="">
         <p>"La confrérie" réalisé par Kilian Breuil sur le film “Seigneur des Anneaux : Les Deux Tours”</p>
+        <hr class="ligne-1-2">
     </section>
     <section>
-        <img src="/public/img/Inception 1.webp" alt="">
+        <img class="img-articles" src="/public/img/Inception 1.webp" alt="">
         <p>"Senseception" réalisé par Lola Roth sur le film “Inception”</p>
+        <hr class="ligne-1-2">
     </section>
     <section>
-        <img src="/public/img/Rush 1.webp" alt="">
+        <img class="img-articles" src="/public/img/Rush 1.webp" alt="">
         <p>"Rush Racing Rivals" réalisé par Antoine Fabre sur le film “Rush”</p>
+        <hr class="ligne-1-2">
     </section>
     <section>
-        <img src="/public/img/Paprika 1.webp" alt="">
+        <img class="img-articles" src="/public/img/Paprika 1.webp" alt="">
         <p>"Paprik-IA" réalisé par Ronan Lefour sur le film “Paprika”</p>
+        <hr class="ligne-1-2">
     </section>
     <footer class="footer">
         <a href="/fr/index.html">
