--- a/fr/page glossaire.html
+++ b/fr/page glossaire.html
@@ -17,27 +17,29 @@
         </p>
         <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
     </header>
-    <h2>Glossaire</h2>
-        <hr>
-    <section>
-        <p>Pandora : Pandora est l'exo-lune de fiction où se déroule le film Avatar de James Cameron. C'est un satellite de Polyphème, une géante gazeuse de couleur bleue. L’air y est irrespirable pour les humains.</p>
-        <img src="/public/img/pandora ile.webp" alt="">
+    <section class="section-1-1">
+    <p class="titre-2">Glossaire</p>
+    <hr class="ligne-1-articleclass="img-articles" ">
     </section>
     <section>
-        <p>Na'vi : Le na'vi est une langue construite inventée pour la franchise cinématographique Avatar de James Cameron. Il s'agit de la langue des Na'vi, créatures humanoïdes indigènes de la lune Pandora.</p>
-        <img src="/public/img/rassemblement.webp" alt="">
+        <p class="p1">Pandora : Pandora est l'exo-lune de fiction où se déroule le film Avatar de James Cameron. C'est un satellite de Polyphème, une géante gazeuse de couleur bleue. L’air y est irrespirable pour les humains.</p>
+        <img class="img-articles" src="/public/img/pandora ile.webp" alt="">
     </section>
     <section>
-        <p>Banshee : Le Banshee (Nom Na'vi : Ikran) est une créature de Pandora. C'est un grand volatile, que les Na'vis ont pu dompter pour se déplacer dans les airs. Il en existe deux sortes : ceux des montagnes et ceux des forêts.</p>
-        <img src="/public/img/dragon.webp" alt="">
+        <p class="p1">Na'vi : Le na'vi est une langue construite inventée pour la franchise cinématographique Avatar de James Cameron. Il s'agit de la langue des Na'vi, créatures humanoïdes indigènes de la lune Pandora.</p>
+        <img class="img-articles" src="/public/img/rassemblement.webp" alt="">
     </section>
     <section>
-        <p>Thanatos : Le Thanator est une créature de Pandora, peut-être la plus dangereuse. Ce prédateur terrestre a des airs de panthère terrienne, mais elle est une véritable menace pour toutes les autres espèces.</p>
-        <img src="/public/img/tricératops.webp" alt="">
+        <p class="p1">Banshee : Le Banshee (Nom Na'vi : Ikran) est une créature de Pandora. C'est un grand volatile, que les Na'vis ont pu dompter pour se déplacer dans les airs. Il en existe deux sortes : ceux des montagnes et ceux des forêts.</p>
+        <img class="img-articles" src="/public/img/dragon.webp" alt="">
     </section>
     <section>
-        <p>Eywa : Dans les films Avatar, Eywa est la divinité du peuple Na'vi. Selon les croyances de ce peuple, il s'agit d'une force protectrice et vivante, un gardien qui maintient l'équilibre sur Pandora.</p>
-        <img src="/public/img/arbre shinju.webp" alt="">
+        <p class="p1">Thanatos : Le Thanator est une créature de Pandora, peut-être la plus dangereuse. Ce prédateur terrestre a des airs de panthère terrienne, mais elle est une véritable menace pour toutes les autres espèces.</p>
+        <img class="img-articles" src="/public/img/tricératops.webp" alt="">
+    </section>
+    <section class="section-1-2">
+        <p class="p1">Eywa : Dans les films Avatar, Eywa est la divinité du peuple Na'vi. Selon les croyances de ce peuple, il s'agit d'une force protectrice et vivante, un gardien qui maintient l'équilibre sur Pandora.</p>
+        <img class="img-articles" src="/public/img/arbre shinju.webp" alt="">
     </section>
     <footer class="footer">
         <a href="/fr/index.html">
