ajout icone + modifications page 404

--- a/fr/404.html
+++ b/fr/404.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Page introuvable - Erreur 404</title>
+  <link rel="stylesheet" href="/src/css/style.css">
+  <link rel="icon" href="/public/icones/header/Logo site Avatar's Legacy 1.svg">
 </head>
 <body class="body-404">
   <h1>Erreur</h1>
