--- a/fr/page contact.html
+++ b/fr/page contact.html
@@ -8,6 +8,7 @@
 
     <script src="//unpkg.com/alpinejs" defer></script>
     <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="icon" href="/public/icones/header/Logo site Avatar's Legacy 1.svg">
 </head>
 <body>
     <header class="header">
