modifications css ligne footer

--- a/fr/page contact.html
+++ b/fr/page contact.html
@@ -53,7 +53,7 @@
       <a href="https://open.spotify.com/playlist/5xikFhBDZVLs3Cklcxnnki">
       <img class="logos-footer" src="/public/icones/Vector.svg" alt="">
       </a>
-      <hr class="ligne">
+      <hr class="ligne-1-2">
       <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
       <a href="http://www.iut-bm.univ-fcomte.fr/pages/fr/dpt-mmi---actualites-18542.html">
       <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
