ajout normalize + début menu

--- a/fr/index.html
+++ b/fr/index.html
@@ -16,7 +16,23 @@
         <p class="titre-header">
             Avatar's Legacy
         </p>
-        <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
+        <nav>
+            <ul>
+                <p>ARTICLES</p>
+                <li><a href=""></a>RÉPLIQUE</li>
+                <li><a href=""></a>FILM</li>
+                <li><a href=""></a>RÉALISATEUR</li>
+                <li><a href=""></a>BANDE SON</li>
+                <li><a href=""></a>LIVRE</li>
+                <p>INFORMATIONS</p>
+                <li><a href=""></a>GLOSSAIRE</li>
+                <li><a href=""></a>A PROPOS</li>
+                <li><a href=""></a>CONTACT</li>
+                <li><a href=""></a>AUTRES PROJETS</li>
+                <hr>
+                <img src="/public/img/english.webp" alt="drapeau anglais">
+            </ul>
+        </nav>
     </header>
     <section class="section-1">
         <img src="/public/img/jake et neytiri proches.webp" alt="">
