--- a/fr/index.html
+++ b/fr/index.html
@@ -16,7 +16,10 @@
         <p class="titre-header">
             Avatar's Legacy
         </p>
-        <nav>
+        <div class="nav-toggle">
+            <div class="nav-toggle-bar"></div>
+        </div>
+        <nav class="menu">
             <ul>
                 <p>ARTICLES</p>
                 <li><a href=""></a>RÉPLIQUE</li>
