ajout transition menu

--- a/fr/index.html
+++ b/fr/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/css/style.css">
     <link rel="icon" href="/public/icones/header/Logo site Avatar's Legacy 1.svg">
 </head>
-<body>
+<body class=" ">
     <header class="header">
         <img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
         <p class="titre-header">
