--- a/fr/index.html
+++ b/fr/index.html
@@ -16,7 +16,7 @@
         <p class="titre-header">
             Avatar's Legacy
         </p>
-        <div class="nav-toggle">
+        <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
             <div class="nav-toggle-bar"></div>
         </div>
         <nav class="menu">
