modifications menu + header css

--- a/fr/index.html
+++ b/fr/index.html
@@ -16,6 +16,7 @@
         <p class="titre-header">
             Avatar's Legacy
         </p>
+        <img class="menu-header" src="/public/icones/menu bleu.svg" alt="menu bleu">
         <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
             <div class="nav-toggle-bar"></div>
         </div>
@@ -32,8 +33,8 @@
                 <li><a href=""></a>A PROPOS</li>
                 <li><a href=""></a>CONTACT</li>
                 <li><a href=""></a>AUTRES PROJETS</li>
-                <hr>
-                <img src="/public/img/english.webp" alt="drapeau anglais">
+                <hr class="ligne-1">
+                <img class="flag" src="/public/img/english.webp" alt="drapeau anglais">
             </ul>
         </nav>
     </header>
