ajout lien menu + fichiers anglais

--- a/en/404.html
+++ b/en/404.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Page introuvable - Erreur 404</title>
+  <link rel="stylesheet" href="/src/css/style.css">
+  
 </head>
 <body class="body-404">
   <h1>Erreur</h1>
