--- a/en/404.html
+++ b/en/404.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Page introuvable - Erreur 404</title>
   <link rel="stylesheet" href="/src/css/style.css">
+  <script src="//unpkg.com/alpinejs" defer></script>
   
 </head>
 <body class="body-404">
