--- a/fr/404.html
+++ b/fr/404.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Page introuvable - Erreur 404</title>
+  <title>Page not found - Error 404</title>
+  <link rel="stylesheet" href="/src/css/style.css">
+  
 </head>
 <body class="body-404">
-  <h1>Erreur</h1>
-  <p>La page que vous recherchez est introuvable.</p>
-  <p><a href="/fr/index.html">Retour à la page d'accueil</a></p>
+  <h1>Error</h1>
+  <p>The page you are looking for cannot be found.</p>
+  <p><a href="/en/index.html">Back to the homepage</a></p>
 </body>
 </html>
