--- a/en/index.html
+++ b/en/index.html
@@ -94,7 +94,7 @@
         <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
         </a>
         <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
-        <a href="https://www.instagram.com/explore/tags/avatar/">
+        <a class="lollol" href="https://www.instagram.com/explore/tags/avatar/">
         <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
         </a>
         <a href="https://www.facebook.com/avatarlefilm">
