changement img page d'accueil

--- a/fr/index.html
+++ b/fr/index.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
     <section class="section-1">
-        <img src="/public/img/jake et neytiri proches.webp" alt="">
+        <img src="/public/img/image 1 page d'acceuil.webp" alt="">
         <p class="titre-1">AVATAR</p>
         <hr class="ligne-1">
         <cite class="citation">"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</cite>
