--- a/fr/page article 5.html
+++ b/fr/page article 5.html
@@ -12,11 +12,31 @@
 </head>
 <body>
     <header class="header">
-        <img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
+        <a href="/fr/index.html"><img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site"></a>
         <p class="titre-header">
             Avatar's Legacy
         </p>
-        <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
+        <img class="menu-header" src="/public/icones/menu bleu.svg" alt="menu bleu">
+        <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+            <div class="nav-toggle-bar"></div>
+        </div>
+        <nav class="menu">
+            <ul>
+                <p>ARTICLES</p>
+                <li><a href="/fr/page article 1.html">RÉPLIQUE</a></li>
+                <li><a href="/fr/page article 2.html">FILM</a></li>
+                <li><a href="/fr/page article 3.html">RÉALISATEUR</a></li>
+                <li><a href="/fr/page article 4.html">BANDE SON</a></li>
+                <li><a href="/fr/page article 5.html">LIVRE</a></li>
+                <p>INFORMATIONS</p>
+                <li><a href="/fr/page glossaire.html">GLOSSAIRE</a></li>
+                <li><a href="/fr/page à propos.html">A PROPOS</a></li>
+                <li><a href="/fr/page contact.html">CONTACT</a></li>
+                <li><a href="/fr/page autres projets.html">AUTRES PROJETS</a></li>
+                <hr class="ligne-1">
+                <a href=""><img class="flag" src="/public/img/english.webp" alt="drapeau anglais"></a>
+            </ul>
+        </nav>
     </header>
     <section class="section-1-1">
         <p class="titre-2">Un livre</p>
