--- a/fr/page article 2.html
+++ b/fr/page article 2.html
@@ -73,18 +73,20 @@
         <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
         </a>
         <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
-        <a href="https://www.instagram.com/explore/tags/avatar/">
-        <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
-        </a>
-        <a href="https://www.facebook.com/avatarlefilm">
-        <img class="logos-footer" src="/public/icones/logo Facebook.svg" alt="">
-        </a>
-        <a href="https://twitter.com/officialavatar">
-        <img class="logos-footer" src="/public/icones/logo X.svg" alt=""> 
-        </a>
-        <a href="https://open.spotify.com/playlist/5xikFhBDZVLs3Cklcxnnki">
-        <img class="logos-footer" src="/public/icones/Vector.svg" alt="">
-        </a>
+        <div class="réseaux-sociaux">
+            <a href="https://www.instagram.com/explore/tags/avatar/">
+            <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
+            </a>
+            <a href="https://www.facebook.com/avatarlefilm">
+            <img class="logos-footer" src="/public/icones/logo Facebook.svg" alt="">
+            </a>
+            <a href="https://twitter.com/officialavatar">
+            <img class="logos-footer" src="/public/icones/logo X.svg" alt=""> 
+            </a>
+            <a href="https://open.spotify.com/playlist/5xikFhBDZVLs3Cklcxnnki">
+            <img class="logos-footer" src="/public/icones/Vector.svg" alt="">
+            </a>
+        </div>
         <hr class="ligne-1-2">
         <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
         <a href="http://www.iut-bm.univ-fcomte.fr/pages/fr/dpt-mmi---actualites-18542.html">
